Fix some broken css where a few styles weren't getting applied because mixin was not on a parent

--- a/theme/common.less
+++ b/theme/common.less
@@ -1907,7 +1907,7 @@ p.ui.font.small {
         position: relative;
     }
 
-    .tutorialSimSidebar {
+    .topInstructions {
         left: @simulatorWidth;
     }
 }
@@ -1920,7 +1920,7 @@ p.ui.font.small {
         max-width:@simulatorWidthSmall;
     }
 
-    .tutorialSimSidebar {
+    .topInstructions {
         left: @simulatorWidthSmall;
     }
 
@@ -1951,7 +1951,7 @@ p.ui.font.small {
 }
 
 @media only screen and (min-width: @largestTabletScreen) {
-    .tutorialSimSidebar {
+    .topInstructions {
         min-width: unset;
         max-width: unset;
         padding: 0;
